Fix page section column alignments

--- a/wp-content/themes/divi-ncruralcenter/css/style.css
+++ b/wp-content/themes/divi-ncruralcenter/css/style.css
@@ -57,7 +57,7 @@ h2.category-title {
 
 .et_pb_testimonial {
   background: #EFEFEF !important;
-  padding: 30px 0;
+  padding: 30px 0 30px 20px;
 }
 @media (max-width: 980px) {
   .et_pb_testimonial {
@@ -958,29 +958,37 @@ a:hover, a:focus, a:active {
   bottom: 10px;
   left: 20px;
 }
-.page .et_section_specialty > .et_pb_row, .single .et_section_specialty > .et_pb_row, .archive .et_section_specialty > .et_pb_row {
+.page .et_section_specialty > .et_pb_row, .page .et_section_regular .et_pb_row_fullwidth, .single .et_section_specialty > .et_pb_row, .single .et_section_regular .et_pb_row_fullwidth, .archive .et_section_specialty > .et_pb_row, .archive .et_section_regular .et_pb_row_fullwidth {
   display: flex;
   width: 100% !important;
   max-width: 100% !important;
 }
+.page .et_section_specialty > .et_pb_row .et_pb_column_1_4, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 {
+  width: 25%;
+  margin: 0;
+}
+.page .et_section_specialty > .et_pb_row .et_pb_column_3_4, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4, .single .et_section_specialty > .et_pb_row .et_pb_column_3_4, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_3_4, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4 {
+  width: 75%;
+  margin: 0;
+}
 @media (max-width: 980px) {
-  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4 {
+  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 {
     flex: 1 1 33%;
   }
-  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget {
+  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 .et_pb_widget, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 .et_pb_widget, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4 .et_pb_widget, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 .et_pb_widget {
     width: 100% !important;
   }
-  .page .et_section_specialty > .et_pb_row .et_pb_column_3_4, .single .et_section_specialty > .et_pb_row .et_pb_column_3_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_3_4 {
+  .page .et_section_specialty > .et_pb_row .et_pb_column_3_4, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4, .single .et_section_specialty > .et_pb_row .et_pb_column_3_4, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_3_4, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_3_4 {
     flex: 1 1 67%;
   }
 }
 @media (max-width: 767px) {
-  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4 {
+  .page .et_section_specialty > .et_pb_row .et_pb_column_1_4, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .single .et_section_specialty > .et_pb_row .et_pb_column_1_4, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4, .archive .et_section_specialty > .et_pb_row .et_pb_column_1_4, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_1_4 {
     display: none;
     speak: none;
   }
 }
-.page .et_section_specialty .et_pb_column_inner .et_pb_text, .page .et_section_specialty .et_pb_column_inner .et_pb_video, .page .et_section_specialty .et_pb_column_inner .et_pb_button_alignment_left, .page .et_section_specialty .et_pb_column_inner .staff-list, .single .et_section_specialty .et_pb_column_inner .et_pb_text, .single .et_section_specialty .et_pb_column_inner .et_pb_video, .single .et_section_specialty .et_pb_column_inner .et_pb_button_alignment_left, .single .et_section_specialty .et_pb_column_inner .staff-list, .archive .et_section_specialty .et_pb_column_inner .et_pb_text, .archive .et_section_specialty .et_pb_column_inner .et_pb_video, .archive .et_section_specialty .et_pb_column_inner .et_pb_button_alignment_left, .archive .et_section_specialty .et_pb_column_inner .staff-list {
+.page .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_text, .page .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_video, .page .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_button_alignment_left, .page .et_section_specialty > .et_pb_row .et_pb_column_inner .staff-list, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_text, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_video, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_button_alignment_left, .page .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .staff-list, .single .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_text, .single .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_video, .single .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_button_alignment_left, .single .et_section_specialty > .et_pb_row .et_pb_column_inner .staff-list, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_text, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_video, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_button_alignment_left, .single .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .staff-list, .archive .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_text, .archive .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_video, .archive .et_section_specialty > .et_pb_row .et_pb_column_inner .et_pb_button_alignment_left, .archive .et_section_specialty > .et_pb_row .et_pb_column_inner .staff-list, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_text, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_video, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .et_pb_button_alignment_left, .archive .et_section_regular .et_pb_row_fullwidth .et_pb_column_inner .staff-list {
   padding-left: 20px;
   padding-right: 20px;
   max-width: 900px;
