--- a/wp-content/themes/divi-ncruralcenter/sass/common/_typography.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/common/_typography.scss
@@ -22,7 +22,7 @@ h2.category-title {
 
 .et_pb_testimonial {
   background: $color-gray-light !important;
-  padding: 30px 0;
+  padding: 30px 0 30px 20px;
 
   @media (max-width: 980px) {
     padding-left: 60px;
