--- a/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
+++ b/wp-content/themes/divi-ncruralcenter/sass/layouts/_pages.scss
@@ -33,34 +33,42 @@
     }
   }
 
-  .et_section_specialty {
-    & > .et_pb_row {
-      display: flex;
-      width: 100% !important;
-      max-width: 100% !important;
+  .et_section_specialty > .et_pb_row, .et_section_regular .et_pb_row_fullwidth {
+    display: flex;
+    width: 100% !important;
+    max-width: 100% !important;
 
-      @media (max-width: 980px) {
-        .et_pb_column_1_4 {
-          flex: 1 1 33%;
+    .et_pb_column_1_4 {
+      width: 25%;
+      margin: 0;
+    }
 
-          .et_pb_widget {
-            width: 100% !important;
-          }
-        }
+    .et_pb_column_3_4 {
+      width: 75%;
+      margin: 0;
+    }
 
-        .et_pb_column_3_4 {
-          flex: 1 1 67%;
+    @media (max-width: 980px) {
+      .et_pb_column_1_4 {
+        flex: 1 1 33%;
+
+        .et_pb_widget {
+          width: 100% !important;
         }
       }
 
-      @media (max-width: 767px) {
-        .et_pb_column_1_4 {
-          display: none;
-          speak: none;
-        }
+      .et_pb_column_3_4 {
+        flex: 1 1 67%;
       }
     }
 
+    @media (max-width: 767px) {
+      .et_pb_column_1_4 {
+        display: none;
+        speak: none;
+      }
+    }
+    
     .et_pb_column_inner {
       .et_pb_text, .et_pb_video, .et_pb_button_alignment_left, .staff-list {
         padding-left: 20px;
